--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta charset="utf-8">
 
 <!-- begin _includes/seo.html --><title>  Lentuvat</title>
-<meta name="description" content="Rantamäkit Lentualla">
+<meta name="description" content="Rantamökit Lentualla">
 
 
   <meta name="author" content="Yhteystiedot">
@@ -26,7 +26,7 @@
 <meta property="og:url" content="https://www.lentuvat.fi/">
 
 
-  <meta property="og:description" content="Rantamäkit Lentualla">
+  <meta property="og:description" content="Rantamökit Lentualla">
 
 
 
