--- a/404.html
+++ b/404.html
@@ -21,7 +21,7 @@
 <meta property="og:locale" content="en">
 <meta property="og:site_name" content="Lentuvat">
 <meta property="og:title" content="Page Not Found">
-<meta property="og:url" content="http://0.0.0.0:4000/404.html">
+<meta property="og:url" content="https://www.lentuvat.fi/404.html">
 
 
   <meta property="og:description" content="Page not found.">
@@ -41,7 +41,7 @@
   
 
 
-<link rel="canonical" href="http://0.0.0.0:4000/404.html">
+<link rel="canonical" href="https://www.lentuvat.fi/404.html">
 
 
 
@@ -52,7 +52,7 @@
     
       "@type": "Person",
       "name": "Lentuvat",
-      "url": "http://0.0.0.0:4000/"
+      "url": "https://www.lentuvat.fi/"
     
   }
 </script>
@@ -327,7 +327,7 @@
   </ul>
 </div>
 
-<div class="page__footer-copyright">&copy; 2023 Lentuvat. Powered by <a href="https://jekyllrb.com" rel="nofollow">Jekyll</a> &amp; <a href="https://mademistakes.com/work/minimal-mistakes-jekyll-theme/" rel="nofollow">Minimal Mistakes</a>.</div>
+<div class="page__footer-copyright">&copy; 2024 Lentuvat. Powered by <a href="https://jekyllrb.com" rel="nofollow">Jekyll</a> &amp; <a href="https://mademistakes.com/work/minimal-mistakes-jekyll-theme/" rel="nofollow">Minimal Mistakes</a>.</div>
 
       </footer>
     </div>
